force-app/main/default/objects/WebCart/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>