force-app/main/default/objects/WebCart/fields/Checkout_Options__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Options__c</fullName>
    <label>Checkout Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cart_Shipping_Types</valueSetName>
    </valueSet>
</CustomField>