force-app/main/default/objects/WebCart/fields/CreditCardOnFile__c.field-meta.xml
<CustomField>
    <fullName>CreditCardOnFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card on File</label>
    <type>Checkbox</type>
</CustomField>