force-app/main/default/objects/WebCart/fields/Order_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivery_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Delivery Method</label>
    <referenceTo>OrderDeliveryMethod</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>