force-app/main/default/objects/WebCart/fields/Origin_Cart__c.field-meta.xml
<CustomField>
    <fullName>Origin_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>OriginCarts</relationshipName>
    <type>Lookup</type>
</CustomField>