force-app/main/default/objects/WebCart/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Carts (Shipping Address)</relationshipLabel>
    <relationshipName>Carts1</relationshipName>
    <type>Lookup</type>
</CustomField>