force-app/main/default/objects/WebCart/fields/Shipping_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Code__c</fullName>
    <label>Shipping Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>