force-app/main/default/objects/WebCart/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <defaultValue>(&quot;Standard Shipping&quot;)</defaultValue>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cart_Shipping_Types</valueSetName>
    </valueSet>
</CustomField>