force-app/main/default/objects/WebCart/fields/Shipping_Types__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Types__c</fullName>
    <label>Shipping Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cart_Shipping_Types</valueSetName>
    </valueSet>
</CustomField>